2008-11-11  Hans Boehm <Hans.Boehm@hp.com>
	(Really almost entirely Ivan Maidansky)
	* win32_threads.c: Support PARALLEL_MARK.  Make printf arg
	types agree with format specifiers.  Add missing copyright header.
	Add STATIC for GC_threads.
	* include/private/gcconfig.h: Add FIXME comment.
	* tests/test.c (run_ine_test): Replace LOCK/UNLOCK use with
	AO_fetch_and_add1_full.  Declare n_tests as AO_t.
	(WinMain): Dont call GC_use_DllMain.
	with PARALLEL_MARK or THREAD_LOCAL_ALLOC.

2008-11-10  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidansky)
	* alloc.c (GC_try_to_collect_inner): Don't print redundant
	GC_bytes_allocd and GC_gc_no.
	(GC_stopped_mark): Print average world stop time.
	* include/private/gc_priv.h (MS_TIME_DIFF): Add cast.

2008-11-10  Hans Boehm <Hans.Boehm@hp.com> (Really mostly Ivan Maidansky)
	* misc.c, doc/README.environment: Add support  for
	GC_FREE_SPACE_DIVISOR and GC-disable-incremental.
	* include/gc.h: Make GC_set_free_space_divisor correspond to
	(somewhat unfortunate) reality.

2008-11-07  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidansky)
	(Mostly improves LLP64 support.)
	* backgraph.c, checksums.c, dbg_mlc.c, finalize.c, mark.c,
	misc.c,	reclaim.c: Changed some int and long type to word or size_t
	(and vice versa where appropriate)
	* gcj_mlc.c, include/private/dbg_mlc.h, include/private/gcconfig.h,
	include/private/thread_local_alloc.h, mark.c,
	misc.c, thread_local_alloc.c, win32_threads.c: Added intermediate
	casts to word type when casting from int to pointer (or pointer
	to int, or data pointer to code pointer) - just to remove the
	corresponding compiler warning.
	* ptr_chck.c (GC_is_visible): cast int const to word type to
	prevent left shift overflow.
	* os_dep.c: change the type of GC_mem_top_down global var
	(containing a flag) to DWORD.
	* include/gc_config_macros.h: define GC_SOLARIS_THREADS if GC_THREADS
	is defined on SunOS x86_64.
	* misc.c (GC_init_size_map): Ifdef out GC_ASSERT as a workaround